kubernetes/prod/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phishing-quest-deployment
  labels:
    app: phishing-quest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phishing-quest
  template:
    metadata:
      labels:
        app: phishing-quest
    spec:
      containers:
        - name: phishing-quest
          imagePullPolicy: Always
          image: loganncardoso/phishing-quest:0.0.3
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "500Mi"
              cpu: "200m"
          ports:
             - containerPort: 8080
          volumeMounts:
             - name: config-vol
               mountPath: /app/config.yaml
               subPath: config.yaml
               readOnly: true
      volumes:
          - name: config-vol
            configMap:
              name: phishing-quest-config
