kubernetes/prod/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phishing-quest-postgresql
  labels:
    app: phishing-quest-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phishing-quest-postgresql
  template:
    metadata:
      labels:
        app: phishing-quest-postgresql
    spec:
      containers:
        - name: postgres
          image: postgres:16.4
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
