kubernetes/prod/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phishing-quest-postgresql
  labels:
    app: phishing-quest-postgresql
spec:
  selector:
    app: phishing-quest-postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
