kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phishing-quest-service
spec:
  selector:
    app: phishing-quest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
