kubernetes/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phishing-quest-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: phishing-quest.labsc.tech
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: phishing-quest-service
                port:
                  number: 80
  tls:
    - hosts:
        - phishing-quest.labsc.tech
      secretName: phishing-quest-tls
